lost the index somewhere

--- a/solar-control/rootfs/usr/bin/templates/configure_devices.html
+++ b/solar-control/rootfs/usr/bin/templates/configure_devices.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="nav-menu">
-        <a href="{{ url_for('index') }}" class="button">Back to Dashboard</a>
+        <a href="{{ url_for('static_page', page='') }}" class="button">Back to Dashboard</a>
     </div>
 
     <div class="card">
